# adc_developability

./: README.md  pyproject.toml
.data/: developability_TAP_RDkit.csv  quality_heavy.csv  quality_light.csv
adc_developability/: __init__.py  embeddings.py
adc_developability/antibody_Fv/: antiberty_utils.py
adc_developability/cli/: constant_embeddings.py  quality.py
adc_developability/proteins/facebook/: esm2_t33_650M.py
adc_developability/proteins/rostlab/: prot_bert.py
adc_developability/proteins/utils/: features.py  masking.py  sequence_prep.py  stat_metrics.py
adc_developability/proteins/yarongef/: distillprotbert.py
adc_developability/proteins/zjunlp/: onto_protein.py
adc_developability/wlp/deepchem/: chemberta.py
adc_developability/wlp/jonghyunlee/: chembert_chembl.py
adc_developability/wlp/juim/: smiles_bert.py
adc_developability/wlp/unikei/: bert_base_smiles.py
adc_developability/wlp/utils/: features.py
tests/: test_protein_embed.py  test_sequence_prep.py  test_small_molecule_embed.py
