[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adc_developability"
version = "2026.3"
description = "Workflows used in the paper \"Something Something Developability of Antibody-Drug Conjugates\""
authors = [{ name = "Joan Clark-Nicolas", email = "joan.clark-nicolas@strath.ac.uk" }]
dependencies = [
    "pytest",
    "numpy==2.0.2",
    "torch==2.8.0",
    "transformers==4.57.6",
    "tokenizers==0.22.2",
    "sentencepiece==0.2.1",
    "protobuf==3.20.3",
    "redim",
]

[project.scripts]
# command = "package.cli.script:main" # placeholder for entry point